kubernetes/apps/selfhosted/paperless/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: paperless
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: paperless
      app.kubernetes.io/instance: paperless
      app.kubernetes.io/controller: paperless
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:app: paperless-dragonfly
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-internal
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
